updated description text

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 
 <body>
     <h1 id = "title">
-        Chicken Smoothie Pet Finder
+        The (Unofficial) Chicken Smoothie Pet Finder
     </h1>
         
     <p id = "info">
-        this is an unofficial tool for the virtual pet game, Chicken Smoothie, 
-        designed to help users identify the pets adopted from the Dec 18th boxes!
+        welcome! this is a tool for the virtual pet Chicken Smoothie, that
+        allows you to find the release date of a pet from its image. no longer
+        will you have to wonder what pet you received on December 18th ☺
         simply copy and paste the image address of your pet 
         (without dress-up items!) into the box below and click/press enter.
     </p>
