--- a/survey.html
+++ b/survey.html
@@ -1,5 +1,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js"></script>
-<script src="database.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css" />
 
 <body>
@@ -9,10 +8,8 @@
 
   <div class="navbar">
     <a href="index.html">Pet Finder</a>
-    <a href="item.html" style="background: #cfb80c; color: black"
-      >Item Finder</a
-    >
-    <a href="survey.html">Survey</a>
+    <a href="item.html">Item Finder</a>
+    <a href="survey.html" style="background: #cfb80c; color: black">Survey</a>
   </div>
 
   <div class="row">
@@ -50,12 +47,15 @@
     </div>
 
     <div class="main">
-      <h3 text-align="center">Item Finder</h3>
-      <p>Coming soon!</p>
-
-      <br />
-
-      <br />
+      <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLScWOLj9NSf4IcVHlZh0GZdJX_TK1GDTiu-Iv1Xmx4p9OyuhVQ/viewform?embedded=true"
+        width="640"
+        height="801"
+        frameborder="0"
+        marginheight="0"
+        marginwidth="0"
+        >Loading…</iframe
+      >
     </div>
   </div>
 
